<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.naviEmotion.NaviEmotionFragment"
    android:background="#E5E6EF">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="8dp"
            android:text="@string/emotion_desc"
            android:textSize="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btAnger"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="200dp"
            android:background="@drawable/button_states"
            android:text="@string/bt_anger"
            android:textSize="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btJoy"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/btJoy"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="200dp"
            android:background="@drawable/button_states"
            android:text="@string/bt_joy"
            android:textSize="15dp"
            app:layout_constraintEnd_toStartOf="@+id/btAnger"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/btEnjoyment"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/button_states"
            android:text="@string/bt_enjoyment"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btSad"
            app:layout_constraintTop_toBottomOf="@+id/btAnger" />

        <Button
            android:id="@+id/btSad"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/button_states"
            android:text="@string/bt_sad"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btEnjoyment"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btJoy" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
